user signup issue fixed

--- a/local.env
+++ b/local.env
@@ -1,4 +1,4 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="file:/Users/mac/Documents/Projects/bus-ticket-booking-app/dev.db"
 JWT_SECRET="replace-this-with-a-secret"
 
 # Stripe
