--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,14 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   test:
@@ -15,16 +23,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: npm
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test --silent
+
+  security-audit:
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: npm
       - name: Install dependencies
         run: npm ci
       - name: Dependency Vulnerability Audit (all deps)
         run: npm run security:audit --silent
       - name: Dependency Vulnerability Audit (prod deps)
         run: npm run security:audit:prod --silent
-      - name: Run tests
-        run: npm test --silent
-      - name: Run coverage
-        if: success()
-        run: |
-          npm install -D @vitest/coverage-v8 --no-save
-          npm run test:coverage --silent
