--- a/package.json
+++ b/package.json
@@ -20,29 +20,30 @@
   },
   "dependencies": {
     "@prisma/client": "5.10.0",
-    "stripe": "^11.15.0",
     "bcryptjs": "2.4.3",
     "jsonwebtoken": "9.0.2",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "stripe": "^11.15.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "jsdom": "^22.1.0",
     "prisma": "5.10.0",
     "tailwindcss": "^4",
     "ts-node": "10",
     "typescript": "^5",
-    "vitest": "^1.2.2",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "jsdom": "^22.1.0"
+    "vitest": "^1.2.2"
   }
 }
