UI changes and validations updated

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prisma:migrate": "prisma migrate dev --name init",
     "prisma:studio": "prisma studio",
     "seed": "ts-node --transpile-only --compiler-options \"{\\\"module\\\":\\\"commonjs\\\",\\\"moduleResolution\\\":\\\"node\\\"}\" prisma/seed.ts",
+    "seed:trips:30d": "ts-node --transpile-only --compiler-options \"{\\\"module\\\":\\\"commonjs\\\",\\\"moduleResolution\\\":\\\"node\\\"}\" prisma/add-next-30-days-trips.ts",
     "test:password": "ts-node scripts/test-password.ts"
   },
   "dependencies": {
