license version added

--- a/local.env
+++ b/local.env
@@ -1,5 +1,6 @@
 DATABASE_URL="file:/Users/mac/Documents/Projects/bus-ticket-booking-app/dev.db"
 JWT_SECRET="replace-this-with-a-secret"
+DEFAULT_ORGANIZATION_ID="1"
 
 # Stripe
 # SECRET key (server-side only): set to your Stripe secret key (sk_test_...)
