--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bus-ticket-booking-app",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
